# tumult

./: .gitignore  .gitmodules  AUTO_UPDATE.md  README.md  nuxt.config.ts  package.json  todo.md
.github/workflows/: release.yml
app/: app.vue  declarations.d.ts  sw.js
app/assets/: temp.plist
app/components/: ActivityStatus.vue  Chat.vue  ChatFile.vue  ChatSidebar.vue  ChatSidebarCategory.vue  ChatSticker.vue  CreateRoomModal.vue  CreateSpaceModal.vue  CustomTitlebar.vue  DiagRow.vue  GameCard.vue  GlobalConfirmationDialog.vue  GlobalContextMenu.vue  GlobalSearchModal.vue  KeychainWarningDialog.vue  LinkPreview.vue  MatrixAvatar.vue  MediaPreviewModal.vue  MessageContent.vue  ParticipantTile.vue  ProfileCard.vue  RoomContextMenu.vue  RoomMemberList.vue  RoomSettingsModal.vue  SecurityBanner.vue  SpaceHierarchyTree.vue  SpaceLobby.vue  SpaceSettingsModal.vue  UserProfile.vue  VerificationModal.vue
app/composables/: useAppStorage.ts  useGameActivity.ts  useHaptics.ts  useJoinCall.ts  useMatrixGame.ts  useMobileGestures.ts  useRegionDetection.ts
app/middleware/: auth.ts
app/pages/: chat.vue  index.vue  login.vue
public/: splash.html  sw.js  update.json
scripts/: build-arrpc-sidecar.cjs  build-arrpc-sidecar.js
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: App.icns  icon.icns
src-tauri/resources/: Assets.car
src-tauri/src/: crypto.rs  game_scanner.rs  lib.rs  rpc.rs
src-tauri/src/rpc_server/: ipc.rs  mod.rs  transport.rs  types.rs  websocket.rs  ws.rs
(+47 files in other folders)
